[gd_scene load_steps=3 format=2]

[ext_resource path="res://hero/images/red_ship.png" type="Texture" id=1]
[ext_resource path="res://hero/hero.gd" type="Script" id=2]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 9.53674e-07, -1.64801 )
scale = Vector2( 1, 0.638709 )
polygon = PoolVector2Array( 0.997516, -46.2852, -4.82962, -31.7004, -6.24703, -16.6213, -7.66444, -11.6773, -8.13691, 1.42431, -10.4993, 5.87391, -19.0037, -9.69968, -27.8232, 6.3683, -26.7207, 18.7283, -24.0434, 22.1891, -22.1535, 46.9091, -19.0037, 49.3811, -14.7515, 38.0099, -13.4916, 22.9307, -11.2867, 27.6275, -8.45189, 47.1563, 4.61979, 50.617, 9.81696, 48.3923, 11.7068, 40.2347, 12.8093, 25.8971, 16.1166, 21.9419, 17.219, 33.5603, 20.3688, 48.6395, 22.5737, 49.3811, 26.1959, 42.4595, 26.5109, 29.6051, 26.3534, 22.9307, 30.1332, 17.4923, 31.0781, 8.5931, 29.0308, -3.27249, 25.566, -8.46368, 20.5263, -10.4413, 16.589, -7.47488, 10.1319, -4.26128, 11.2344, -11.1829, 9.97446, -19.5877, 8.55704, -29.7228, 6.50967, -39.858 )

[node name="red_ship" type="Sprite" parent="."]
position = Vector2( 1.00002, 3.05176e-05 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0.5, -6 )

[node name="TimerShot" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TimerHit" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 1.90735e-06, -2.70061 )
scale = Vector2( 1, 0.407949 )
polygon = PoolVector2Array( 0.997516, -46.2852, -4.82962, -31.7004, -6.24703, -16.6213, -7.66444, -11.6773, -8.13691, 1.42431, -10.4993, 5.87391, -19.0037, -9.69968, -27.8232, 6.3683, -26.7207, 18.7283, -24.0434, 22.1891, -22.1535, 46.9091, -19.0037, 49.3811, -14.7515, 38.0099, -13.4916, 22.9307, -11.2867, 27.6275, -8.45189, 47.1563, 4.61979, 50.617, 9.81696, 48.3923, 11.7068, 40.2347, 12.8093, 25.8971, 16.1166, 21.9419, 17.219, 33.5603, 20.3688, 48.6395, 22.5737, 49.3811, 26.1959, 42.4595, 26.5109, 29.6051, 26.3534, 22.9307, 30.1332, 17.4923, 31.0781, 8.5931, 29.0308, -3.27249, 25.566, -8.46368, 20.5263, -10.4413, 16.589, -7.47488, 10.1319, -4.26128, 11.2344, -11.1829, 9.97446, -19.5877, 8.55704, -29.7228, 6.50967, -39.858 )

[connection signal="timeout" from="TimerShot" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerHit" to="." method="_on_TimerHit_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
